--- a/Landing Page 4 - Website Ramadan/exemplodesite8.html
+++ b/Landing Page 4 - Website Ramadan/exemplodesite8.html
@@ -44,15 +44,7 @@
 	</section>
 
 
-	<script>
-		const menuToggle = document.querySelector('.toggle');
-		menuToggle.onclick = function() {
-			menuToggle.classList.toggle('active'); }
-		const navigation = document.querySelector('.navigation');
-		menuToggle.onclick = function(){
-			navigation.classList.toggle('active');
-		} 
-	</script>
+	<script src="exemplodesite8.js"></script>
 
 </body>
 </html>
